[tool.poetry]
name = "hjerter"
version = "0.1.0"
description = ""
authors = ["Ching-yu Lin <cyl@chingyulin.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
